# gl-umeasurement-firmware

./: .gitignore  CMakeLists.txt  README.md  flags.cmake  project.yml  setup.sh
KSDK/CMSIS/Driver/Include/: CMSIS_Driver_Include_Common_LPC55S28.cmake  CMSIS_Driver_Include_SPI_LPC55S28.cmake
KSDK/CMSIS/Include/: CMSIS_Include_dsp_LPC55S28.cmake
KSDK/boards/lpcxpresso55s28/cmsis_driver_examples/gpio/button_toggle_led/: cmsis_gpio_button_toggle_led_v3_8.xml
KSDK/boards/lpcxpresso55s28/cmsis_driver_examples/usart/dma_transfer/: readme.txt
KSDK/boards/lpcxpresso55s28/component_examples/log/bm/: log_bm_v3_8.xml
KSDK/boards/lpcxpresso55s28/demo_apps/hello_world/: readme.txt
KSDK/boards/lpcxpresso55s28/demo_apps/hello_world_swo/armgcc/: config.cmake
KSDK/boards/lpcxpresso55s28/demo_apps/hello_world_virtual_com/: pin_mux.c  readme.txt
KSDK/boards/lpcxpresso55s28/demo_apps/shell/: shell_v3_8.xml
KSDK/boards/lpcxpresso55s28/demo_apps/utick_wakeup/armgcc/: CMakeLists.txt
KSDK/boards/lpcxpresso55s28/driver_examples/anactrl/measure_frequency/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/casper/: casper_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/clockout/: clockout_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/cmp/polling/: cmp_polling_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/crc/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/ctimer/simple_match_interrupt/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/ctimer/simple_pwm_interrupt/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/dma/channel_chain/: dma_channel_chain_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/dma/linked_transfer/: dma_linked_transfer_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/dma/memory_to_memory/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/flashiap/: flashiap1_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/flashiap/armgcc/: CMakeLists.txt
KSDK/boards/lpcxpresso55s28/driver_examples/gpio/led_output/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/i2c/read_accel_value_transfer/: i2c_read_accel_value_transfer_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/lpadc/polling/: lpadc_polling_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/mrt/: mrt_example_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/mrt/armgcc/: CMakeLists.txt
KSDK/boards/lpcxpresso55s28/driver_examples/pint/pin_interrupt/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/prince/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/rng/random/: rng_random_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/rtc/: rtc_example_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/rtc/armgcc/: CMakeLists.txt
KSDK/boards/lpcxpresso55s28/driver_examples/sctimer/16bit_counter/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/sctimer/pwm_with_dutycyle_change/: sctimer_pwm_with_dutycyle_change_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/sctimer/simple_pwm/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/usart/dma_double_buffer_transfer/: readme.txt
KSDK/boards/lpcxpresso55s28/driver_examples/usart/interrupt_transfer/: usart_interrupt_transfer_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/usart/polling/: usart_polling_v3_8.xml
KSDK/boards/lpcxpresso55s28/driver_examples/wwdt/: readme.txt  wwdt_example_v3_8.xml
KSDK/boards/lpcxpresso55s28/usb_examples/usb_device_audio_generator_lite/bm/: audio_generator.c
KSDK/boards/lpcxpresso55s28/usb_examples/usb_device_video_virtual_camera/bm/armgcc/: CMakeLists.txt
KSDK/devices/LPC55S28/: driver_power_LPC55S28.cmake
KSDK/devices/LPC55S28/cmsis_drivers/: driver_cmsis_flexcomm_spi_LPC55S28.cmake  driver_cmsis_lpc_gpio_LPC55S28.cmake
KSDK/devices/LPC55S28/drivers/: driver_clock_LPC55S28.cmake  driver_cmp_1_LPC55S28.cmake  driver_flexcomm_i2c_LPC55S28.cmake  driver_flexcomm_i2c_dma_LPC55S28.cmake  driver_flexcomm_usart_LPC55S28.cmake  driver_flexcomm_usart_dma_LPC55S28.cmake  driver_inputmux_LPC55S28.cmake  driver_mrt_LPC55S28.cmake  driver_sctimer_LPC55S28.cmake  driver_sdif_LPC55S28.cmake  driver_sysctl_LPC55S28.cmake  driver_wwdt_LPC55S28.cmake
armgcc/: CMakeLists.txt  armgcc.cmake  config.cmake  flags.cmake  setup.ps1  setup.sh
src/: board.c  error.h  main.c  pin_mux.c  pin_mux.h  readme.txt  version.h
src/KSDK/CMSIS/Include/: CMSIS_Include_common_LPC55S28.cmake  CMSIS_Include_core_cm33_LPC55S28.cmake
src/KSDK/boards/lpcxpresso55s28/sdmmc_examples/sdcard_polling/armgcc/: CMakeLists.txt
src/KSDK/devices/LPC55S28/: device_LPC55S28_CMSIS_LPC55S28.cmake
src/KSDK/devices/LPC55S28/cmsis_drivers/: driver_cmsis_flexcomm_i2c_LPC55S28.cmake  driver_cmsis_flexcomm_usart_LPC55S28.cmake
src/KSDK/devices/LPC55S28/drivers/: driver_ctimer_LPC55S28.cmake  driver_flexcomm_i2s_dma_LPC55S28.cmake  driver_flexcomm_spi_LPC55S28.cmake  driver_gint_LPC55S28.cmake  driver_lpc_dma_LPC55S28.cmake  driver_pint_LPC55S28.cmake  driver_rng_1_LPC55S28.cmake
src/SDK/: LPC5526_manifest_v3_8.xml  SW-Content-Register.txt
src/SDK/CMSIS/Driver/Include/: CMSIS_Driver_Include_I2C_LPC55S28.cmake  CMSIS_Driver_Include_USART_LPC55S28.cmake
src/SDK/devices/LPC55S28/: device_LPC55S28_startup_LPC55S28.cmake
src/SDK/devices/LPC55S28/drivers/: driver_anactrl_LPC55S28.cmake  driver_casper_LPC55S28.cmake  driver_flexcomm_LPC55S28.cmake  driver_flexcomm_i2s_LPC55S28.cmake  driver_hashcrypt_LPC55S28.cmake  driver_iap1_LPC55S28.cmake  driver_inputmux_connections_LPC55S28.cmake  driver_lpadc_LPC55S28.cmake  driver_lpc_crc_LPC55S28.cmake  driver_lpc_gpio_LPC55S28.cmake  driver_lpc_rtc_LPC55S28.cmake  driver_prince_LPC55S28.cmake  driver_puf_LPC55S28.cmake  driver_utick_LPC55S28.cmake
src/SDK/devices/LPC55S28/utilities/: utility_assert_LPC55S28.cmake
src/adc/: adc.c  adc.h
src/board/: board.c  board.h  pin_mux.c  pin_mux.h
src/gpio/: gpio.c  gpio.h
src/ui/: ui.c  ui.h
src/usb/: hid_generic.c  hid_generic.h  usb_device_descriptor.c  usb_device_descriptor.h
(+269 files in other folders)
